alignement, new loader, correction du bug de position de lightBox, etc...

--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -20,8 +20,8 @@ $lg: 1200px;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  -webkit-backdrop-filter: saturate(180%) blur(20px);
-  backdrop-filter: saturate(180%) blur(20px);
+  //-webkit-backdrop-filter: saturate(180%) blur(20px);
+  //backdrop-filter: saturate(180%) blur(20px);
   @media screen and (max-width: 1044px) {
     min-width: 320px;
   }
@@ -68,8 +68,8 @@ $lg: 1200px;
   height: 48px;
   cursor: pointer;
   -webkit-transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1), -webkit-transform 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-  transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1), -webkit-transform 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-  transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1), transform 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  //transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1), -webkit-transform 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+  //transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1), transform 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
   transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1), transform 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.4s cubic-bezier(0.4, 0.01, 0.165, 0.99);
   -webkit-tap-highlight-color: transparent;
   @media screen and (max-width: $sm) {
@@ -184,9 +184,10 @@ $lg: 1200px;
   right: 1.2em;
   //top: 1.2em;
   padding: 0;
-  list-style: none;
+
   margin: 0;
   @media screen and (max-width: $sm) {
+    list-style: none;
     position: absolute;
     z-index: 2;
     top: 44px;
@@ -216,16 +217,17 @@ $lg: 1200px;
 }
 
 .menuItem {
+  margin-left: 3em;
   display: inline-block;
-  text-transform: uppercase;
-  font-size: 1rem;
-  display: inline-block;
-  position: relative;
+  //text-transform: uppercase;
+  font-size: 15px;
+    position: relative;
   height: 44px;
   z-index: 1;
   vertical-align: top;
 
   @media screen and (max-width: $sm) {
+    margin-left: 0;
     width: 100%;
     height: 44px;
     border-bottom: 1px solid #333;
