--- a/src/app/component/instagram/instagram.component.scss
+++ b/src/app/component/instagram/instagram.component.scss
@@ -2,7 +2,7 @@
   transition: all 0.4s;
   position: fixed;
   right: 0;
-  top: 5.3em !important;
+  top: 3.8em !important;
   z-index: 200;
   @media screen and (max-width: 768px) {
     top: 2.1em;
