--- a/src/app/component/latest/latest.component.scss
+++ b/src/app/component/latest/latest.component.scss
@@ -1,10 +1,10 @@
 #main {
   //padding-top: 6.3em;
   margin: auto;
-  transform: translate(0em, 5.3em);
+  transform: translate(0em, 3.8em);
   transition: all 0.4s;
   @media screen and (max-width: 768px) {
-    transform: translate(0em, 4.2em);
+    transform: translate(0em,4.2em);
   }
 }
 
